# MineGraph

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile.dashboard  Dockerfile.server  Dockerfile.web  NEXT_STEPS.md  README.md  TESTING.md  cloudbuild.yaml  docker-compose.yml  minegraph_gem_v3.py  package-lock.json  package.json  run
.claude/: launch.json
.github/workflows/: ci.yml
crates/extremal-cli/: Cargo.toml
crates/extremal-cli/src/: main.rs
crates/extremal-dashboard/: Cargo.toml
crates/extremal-dashboard/src/: lib.rs  main.rs  server.rs  state.rs
crates/extremal-experiments/: Cargo.toml
crates/extremal-experiments/benches/: compare.rs  profiling.rs
crates/extremal-experiments/src/: harness.rs  lib.rs  main.rs  sa.rs
crates/extremal-graph/: Cargo.toml
crates/extremal-graph/src/: adjacency.rs  cid.rs  lib.rs
crates/extremal-graph/tests/: proptest_graph6.rs
crates/extremal-identity/: Cargo.toml
crates/extremal-identity/src/: lib.rs
crates/extremal-scoring/: Cargo.toml
crates/extremal-scoring/src/: automorphism.rs  clique.rs  histogram.rs  lib.rs  score.rs  tests.rs
crates/extremal-server/: Cargo.toml
crates/extremal-server/src/: cache.rs  error.rs  lib.rs  main.rs  state.rs
crates/extremal-server/src/handlers/: events.rs  health.rs  history.rs  identity.rs  leaderboard.rs  submit.rs  workers.rs
crates/extremal-store/: Cargo.toml
crates/extremal-store/src/: lib.rs  models.rs
crates/extremal-strategies/: Cargo.toml
crates/extremal-strategies/src/: cayley.rs  circulant.rs  construct.rs  crossover.rs  gradient.rs  init.rs  lib.rs  lns.rs  polish.rs  refine.rs  relink.rs  sa.rs  seidel.rs  tabu.rs  template.rs  tree2.rs
crates/extremal-types/: Cargo.toml  build.rs
crates/extremal-types/src/: lib.rs
crates/extremal-worker/: Cargo.toml
crates/extremal-worker-api/: Cargo.toml
crates/extremal-worker-core/: Cargo.toml
crates/extremal-worker-core/src/: api.rs  client.rs  dashboard.rs  engine.rs
crates/extremal-worker/src/: main.rs
crates/minegraph-cli/: Cargo.toml
crates/minegraph-cli/src/: identity.rs  main.rs
crates/minegraph-dashboard/: Cargo.toml
crates/minegraph-dashboard/src/: lib.rs  main.rs  protocol.rs  server.rs  state.rs
crates/minegraph-experiments/: Cargo.toml
crates/minegraph-experiments/benches/: compare.rs
crates/minegraph-experiments/src/: harness.rs  lib.rs  main.rs  sa.rs
crates/minegraph-graph/: Cargo.toml
crates/minegraph-graph/src/: cid.rs  graph6.rs  lib.rs
crates/minegraph-graph/tests/: proptest_graph6.rs
crates/minegraph-identity/: Cargo.toml
crates/minegraph-identity/src/: lib.rs
crates/minegraph-scoring/: Cargo.toml
crates/minegraph-scoring/src/: automorphism.rs  clique.rs  goodman.rs  histogram.rs  lib.rs  score.rs  tests.rs
crates/minegraph-server/: Cargo.toml
crates/minegraph-server/src/: error.rs  lib.rs  main.rs  state.rs
crates/minegraph-server/src/handlers/: events.rs  health.rs  identity.rs  leaderboard.rs  mod.rs  submit.rs  workers.rs
crates/minegraph-store/: Cargo.toml
crates/minegraph-store/src/: lib.rs
crates/minegraph-strategies/: Cargo.toml
crates/minegraph-strategies/src/: init.rs  lib.rs  polish.rs  tabu.rs  tree2.rs
crates/minegraph-types/: Cargo.toml
crates/minegraph-types/src/: lib.rs
crates/minegraph-worker/: Cargo.toml
crates/minegraph-worker-api/: Cargo.toml
crates/minegraph-worker-core/: Cargo.toml
crates/minegraph-worker-core/src/: client.rs  dashboard.rs  engine.rs  lib.rs
crates/minegraph-worker/src/: main.rs
crates/ramseynet-ledger/: Cargo.toml
crates/ramseynet-ledger/src/: error.rs  lib.rs  models.rs  queries.rs  schema.rs
crates/ramseynet-search/: Cargo.toml
crates/ramseynet-search/src/: annealing.rs  client.rs  error.rs  greedy.rs  init.rs  lib.rs  local_search.rs  main.rs  search.rs  tree.rs  worker.rs
crates/ramseynet-search/src/viz/: mod.rs  page.html
crates/ramseynet-server/: Cargo.toml
crates/ramseynet-server/src/: lib.rs  main.rs
crates/ramseynet-server/tests/: system_test.rs
crates/ramseynet-strategies/: Cargo.toml
crates/ramseynet-strategies/src/: evo.rs  incremental.rs  lib.rs  tree.rs  tree2.rs
crates/ramseynet-worker/: Cargo.toml
crates/ramseynet-worker-api/: Cargo.toml
crates/ramseynet-worker-api/src/: command.rs  lib.rs  observer.rs  strategy.rs
crates/ramseynet-worker-core/: Cargo.toml
crates/ramseynet-worker-core/src/: client.rs  engine.rs  error.rs  init.rs  lib.rs
crates/ramseynet-worker/src/: lib.rs  main.rs
crates/ramseynet-worker/src/viz/: mod.rs  page.html  server.rs
dashboard/: package.json  vite.config.ts
dashboard/src/: app.css  app.html
deploy/: nginx-web.conf  setup.sh  web-entrypoint.sh
docs/: ALGORITHM_NEXT_STEPS.md  SIGNING_DESIGN.md  STRATEGY_DEV_PLAN.md
docs/legacy/: CLOUD_DEPLOYMENT.md  GPT_PROMPT.md  LITERATURE_AND_IDEAS.md  RamseyNetSpec.docx  SIGNING_DESIGN.md  STRATEGY_DEV_PLAN.md
docs/notes/: 2026-02-23-gem-concept.md  2026-02-23-high-level-spec.md
experiments/: E001.md  E002.md  E003.md  E004.md  E005.md  E006.md  README.md
experiments/agent/: strategies.json
migrations/: 20260318000001_initial.sql  20260319000001_fix_leaderboard_pk.sql  20260319000002_leaderboard_snapshots.sql
minegraph-v1/: CLAUDE.md
minegraph-v1/scripts/: experiment-10min.sh  experiment-overnight.sh  fleet.sh
scripts/: agent-ab-test.sh  agent-fleet.sh  agent-provenance.sh  agent-snapshot.sh  agent-status.sh  analyze_experiment.sh  e2e-test.sh  experiment-10min.sh  experiment-diverse.sh  experiment-e006.sh  experiment-multi-n.sh  experiment-overnight.sh  experiment.sh  fleet.sh  keep-alive.sh  loop.sh  orchestrator.sh  render_gems.sh  seed-ledger.sh  wsl-dev.sh
scripts/e2e/: helpers.sh  test-homepage.sh  test-leaderboards.sh  test-navigation.sh  test-submission.sh  test-submit-form.sh
skills/: experiment.md  strategy-research.md
test-vectors/: small_graphs.json  verify_requests.json
web/: dev.mjs  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
web/src/: app.css  app.d.ts  app.html
(+50 files in other folders)
