[workspace]
resolver = "2"
members = [
    "crates/minegraph-types",
    "crates/minegraph-graph",
    "crates/minegraph-scoring",
    "crates/minegraph-identity",
    "crates/minegraph-store",
    "crates/minegraph-server",
    "crates/minegraph-worker-api",
    "crates/minegraph-worker-core",
    "crates/minegraph-strategies",
    "crates/minegraph-worker",
    "crates/minegraph-cli",
    "crates/minegraph-dashboard",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/anomalyco/minegraph"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hashing & crypto
blake3 = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = { version = "0.8", features = ["small_rng"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "timeout"] }
reqwest = { version = "0.12", features = ["json"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json", "migrate"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hex encoding
hex = "0.4"

# TOML config
toml = "0.8"

# Utilities
tokio-util = { version = "0.7", features = ["rt"] }

# Testing
proptest = "1"
