[workspace]
resolver = "2"
members = [
    "crates/extremal-types",
    "crates/extremal-graph",
    "crates/extremal-scoring",
    "crates/extremal-identity",
    "crates/extremal-store",
    "crates/extremal-server",
    "crates/extremal-worker-api",
    "crates/extremal-worker-core",
    "crates/extremal-strategies",
    "crates/extremal-worker",
    "crates/extremal-cli",
    "crates/extremal-dashboard",
    "crates/extremal-experiments",
]

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/tswedish/Extremal"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hashing & crypto
blake3 = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = { version = "0.8", features = ["small_rng"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "timeout"] }
reqwest = { version = "0.12", features = ["json"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json", "migrate"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hex encoding
hex = "0.4"

# TOML config
toml = "0.8"

# Utilities
tokio-util = { version = "0.7", features = ["rt"] }

# Testing
proptest = "1"
