[package]
name = "extremal-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "extremal"
path = "src/main.rs"

[dependencies]
extremal-types = { path = "../extremal-types" }
extremal-graph = { path = "../extremal-graph" }
extremal-scoring = { path = "../extremal-scoring" }
extremal-identity = { path = "../extremal-identity" }
clap = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
hex = { workspace = true }
