[package]
name = "extremal-graph"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
extremal-types = { path = "../extremal-types" }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
