[package]
name = "extremal-identity"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
extremal-types = { path = "../extremal-types" }
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
