[package]
name = "extremal-scoring"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
extremal-types = { path = "../extremal-types" }
extremal-graph = { path = "../extremal-graph" }
nauty-Traces-sys = "0.11"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
