[package]
name = "extremal-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
extremal-types = { path = "../extremal-types" }
extremal-graph = { path = "../extremal-graph" }
extremal-scoring = { path = "../extremal-scoring" }
extremal-identity = { path = "../extremal-identity" }
extremal-store = { path = "../extremal-store" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
tokio-util = { workspace = true }
tower_governor = { version = "0.8", default-features = false, features = ["axum"] }
futures-core = "0.3"
