[package]
name = "extremal-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
extremal-types = { path = "../extremal-types" }
extremal-graph = { path = "../extremal-graph" }
extremal-scoring = { path = "../extremal-scoring" }
extremal-identity = { path = "../extremal-identity" }
sqlx = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
