[package]
name = "minegraph-experiments"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "minegraph-experiments"
path = "src/main.rs"

[dependencies]
minegraph-types = { path = "../minegraph-types" }
minegraph-graph = { path = "../minegraph-graph" }
minegraph-scoring = { path = "../minegraph-scoring" }
minegraph-worker-api = { path = "../minegraph-worker-api" }
minegraph-strategies = { path = "../minegraph-strategies" }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "compare"
harness = false
