[package]
name = "minegraph-identity"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
minegraph-types = { path = "../minegraph-types" }
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
