[package]
name = "minegraph-scoring"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
minegraph-types = { path = "../minegraph-types" }
minegraph-graph = { path = "../minegraph-graph" }
nauty-Traces-sys = "0.11"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
