[package]
name = "minegraph-strategies"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
minegraph-types = { path = "../minegraph-types" }
minegraph-graph = { path = "../minegraph-graph" }
minegraph-scoring = { path = "../minegraph-scoring" }
minegraph-worker-api = { path = "../minegraph-worker-api" }
rand = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
