[package]
name = "minegraph-worker-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
minegraph-types = { path = "../minegraph-types" }
minegraph-graph = { path = "../minegraph-graph" }
minegraph-scoring = { path = "../minegraph-scoring" }
minegraph-identity = { path = "../minegraph-identity" }
minegraph-worker-api = { path = "../minegraph-worker-api" }
minegraph-strategies = { path = "../minegraph-strategies" }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
