[package]
name = "minegraph-worker-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
minegraph-types = { path = "../minegraph-types" }
minegraph-graph = { path = "../minegraph-graph" }
minegraph-scoring = { path = "../minegraph-scoring" }
minegraph-identity = { path = "../minegraph-identity" }
minegraph-worker-api = { path = "../minegraph-worker-api" }
minegraph-strategies = { path = "../minegraph-strategies" }
minegraph-dashboard = { path = "../minegraph-dashboard" }
axum = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.26", features = ["connect", "native-tls"] }
futures-util = "0.3"
reqwest = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
