[package]
name = "ramseynet-server"
version = "0.1.0"
edition = "2021"
description = "Axum HTTP/WebSocket server for RamseyNet"
license = "MIT"

[dependencies]
ramseynet-types = { path = "../ramseynet-types" }
ramseynet-graph = { path = "../ramseynet-graph" }
ramseynet-verifier = { path = "../ramseynet-verifier" }
ramseynet-ledger = { path = "../ramseynet-ledger" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
ramseynet-graph = { path = "../ramseynet-graph" }
ramseynet-verifier = { path = "../ramseynet-verifier" }
ramseynet-ledger = { path = "../ramseynet-ledger" }
tokio-tungstenite = "0.24"
futures-util = "0.3"
