[package]
name = "ramseynet-strategies"
version = "0.1.0"
edition = "2021"
description = "Search strategy implementations for RamseyNet (tree/beam search)"
license = "MIT"

[dependencies]
ramseynet-worker-api = { path = "../ramseynet-worker-api" }
ramseynet-types = { path = "../ramseynet-types" }
ramseynet-graph = { path = "../ramseynet-graph" }
ramseynet-verifier = { path = "../ramseynet-verifier" }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
