[package]
name = "ramseynet-worker-api"
version = "0.1.0"
edition = "2021"
description = "Worker API traits and schemas for RamseyNet search strategies"
license = "MIT"

[dependencies]
ramseynet-types = { path = "../ramseynet-types" }
ramseynet-graph = { path = "../ramseynet-graph" }
serde = { workspace = true }
serde_json = { workspace = true }
