[package]
name = "ramseynet-worker-core"
version = "0.1.0"
edition = "2021"
description = "Worker platform core: engine, leaderboard sync, submission pipeline"
license = "MIT"

[dependencies]
ramseynet-worker-api = { path = "../ramseynet-worker-api" }
ramseynet-types = { path = "../ramseynet-types" }
ramseynet-graph = { path = "../ramseynet-graph" }
ramseynet-verifier = { path = "../ramseynet-verifier" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
