[package]
name = "ramseynet-worker"
version = "0.2.0"
edition = "2021"
description = "RamseyNet worker: CLI binary and worker web-app"
license = "MIT"

[[bin]]
name = "ramseynet-worker"
path = "src/main.rs"

[dependencies]
ramseynet-worker-api = { path = "../ramseynet-worker-api" }
ramseynet-worker-core = { path = "../ramseynet-worker-core" }
ramseynet-strategies = { path = "../ramseynet-strategies" }
ramseynet-types = { path = "../ramseynet-types" }
ramseynet-graph = { path = "../ramseynet-graph" }
ramseynet-verifier = { path = "../ramseynet-verifier" }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
